Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
Passed IO context is ignored and default context is used. See current function:
std::shared_ptr<GcsFileSystem> GcsFileSystem::Make(const GcsOptions& options, const io::IOContext& context) { // Cannot use `std::make_shared<>` as the constructor is private. return std::shared_ptr<GcsFileSystem>( new GcsFileSystem(options, io::default_io_context())); }
Attachments
Issue Links
- links to