ARROW-16110: [C++] GcsFileSystem::Make ignores IOContext

This is to resolve [ARROW-16110](https://issues.apache.org/jira/browse/ARROW-16110).

Closes #12788 from rok/ARROW-16110

Authored-by: Rok <rok@mihevc.org>
Signed-off-by: Sutou Kouhei <kou@clear-code.com>